# geo-mcp-server

./: .gitignore  LICENSE  README.md  deploy.sh  licenses.json  mcp-registry.json  package.json  pyproject.toml  requirements.txt  server.py  smithery.yaml  test_server.py  test_stdio.py
.github/: FUNDING.yml
.github/workflows/: publish.yml
deploy/: create-wp-post.php  geo-api.service  landing-post.php  redirect-post.php  update-wp-post.php
payment/: __init__.py  admin.py  admin_dashboard.html  api.py  license.py  orders.py  product-docs.html  x402.py
payment/wechat/: index.html
promo/: juejin-article.md  v2ex-post.md  zhihu-answer.md
src/: __init__.py  utils.py
src/tools/: citation.py  competitor.py  monitor.py  scorer.py
